# ryot2letterboxd

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflow/: build.yml
src/: aws.rs  main.rs
src/model/: letterboxd_import.rs  mod.rs  ryot_export.rs
src/usecases/: letterboxd.rs  mod.rs  ryot.rs
