[package]
name = "ryot2letterboxd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
serde_with = { version = "=3.14.0", features = ["chrono_0_4"] }
csv = "1.3.1"
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1.100.0"
aws-config = "1.8.3"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
aws_lambda_events = "0.17.0"
lambda_runtime = "0.14.3"
